@@ -51,7 +51,20 @@
                 "Time::Local": "0",
                 "Time::Piece": "0",
                 "WWW::Mechanize": "0",
-                "YAML": "0"
+                "YAML": "0",
+
+                "utf8": "0",
+                "Data::Dumper": "0",
+                "File::Basename": "0",
+                "File::Copy": "0",
+                "File::Path": "0",
+                "Getopt::Long": "0",
+                "Imager": "0",
+                "Imager::Graph::Pie": "0",
+                "IO::File": "0",
+                "Template": "0",
+                "Text::Wrap": "0"
+
             }
         }
     },
