@@ -24,13 +24,23 @@ requires:
   Time::Piece:              0
   WWW::Mechanize:           0
   YAML:                     0
+  utf8:                     0  
+  Data::Dumper:             0  
+  File::Basename:           0  
+  File::Copy:               0  
+  File::Path:               0  
+  Getopt::Long:             0  
+  Imager:                   0  
+  Imager::Graph::Pie:       0  
+  IO::File:                 0  
+  Template:                 0  
+  Text::Wrap:               0  
 recommends:
   Test::CPAN::Meta:         0
   Test::CPAN::Meta::JSON:   0
   Test::Pod:                1.00
   Test::Pod::Coverage:      0.08
 build_requires:
-  IO::File:                 0
   Test::More:               0.70
 
 provides:
